--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -19,6 +19,7 @@ license-file: license.txt
 
 build-type: Simple
 cabal-version: >=1.10
+tested-with: GHC==8.2.2, GHC==8.4.3, GHC==8.6.1
 
 library
     hs-source-dirs: library
