set base bounds

--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -30,7 +30,7 @@ library
 
     build-depends:
         aeson
-      , base
+      , base >=4.10 && <5
       , bytestring
       , http-types
       , scotty
