--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -35,7 +35,7 @@ library
 
     build-depends:
         aeson
-      , base
+      , base >=4.10 && <5
       , bytestring
       , lens
       , stripe-concepts
