--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -27,6 +27,9 @@ build-type: Simple
 cabal-version: >=1.10
 tested-with: GHC==8.2.2, GHC==8.4.3, GHC==8.6.1
 
+extra-source-files:
+    changelog.md
+
 library
     hs-source-dirs: library
     default-language: Haskell2010
