--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -6,7 +6,8 @@ category: Web
 
 description:
     This package provides support for writing a
-    <https://stripe.com/ Stripe> webhook server using Scotty.
+    <https://stripe.com/ Stripe> webhook server using
+    <https://hackage.haskell.org/package/scotty Scotty>.
 
 homepage:    https://github.com/typeclasses/stripe
 bug-reports: https://github.com/typeclasses/stripe/issues
