--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -34,5 +34,5 @@ library
 
     build-depends:
         base >=4.10 && <4.14
-      , bytestring
-      , text
+      , bytestring >=0.10 && <0.11
+      , text >=1.2 && <1.3
