--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -34,12 +34,12 @@ library
         Stripe.Scotty
 
     build-depends:
-        aeson
+        aeson >=1.4 && <1.5
       , base >=4.10 && <4.14
-      , bytestring
-      , http-types
-      , scotty
+      , bytestring >=0.10 && <0.11
+      , http-types >=0.12 && <0.13
+      , scotty >=0.11 && <0.12
       , stripe-concepts
       , stripe-signature
-      , text
-      , unordered-containers
+      , text >=1.2 && <1.3
+      , unordered-containers >=0.2 && <0.3
