--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -37,12 +37,12 @@ library
 
     build-depends:
         base >=4.10 && <4.14
-      , base16-bytestring
-      , bytestring
-      , cryptonite
-      , memory
+      , base16-bytestring >= 0.1 && <0.2
+      , bytestring >=0.10 && <0.11
+      , cryptonite >=0.25 && <0.27
+      , memory >=0.14 && <0.16
       , stripe-concepts
-      , text
+      , text >=1.2 && <1.3
 
 test-suite test
     default-language: Haskell2010
@@ -53,6 +53,6 @@ test-suite test
 
     build-depends:
         base >=4.10 && <4.14
-      , bytestring
+      , bytestring >=0.10 && <0.11
       , stripe-signature
-      , text
+      , text >=1.2 && <1.3
