--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -38,11 +38,11 @@ library
         Stripe.Wreq
 
     build-depends:
-        aeson
+        aeson >=1.4 && <1.5
       , base >=4.10 && <4.14
-      , bytestring
-      , lens
+      , bytestring >=0.10 && <0.11
+      , lens >=4.17 && <4.19
       , stripe-concepts
-      , text
-      , unordered-containers
-      , wreq
+      , text >=1.2 && <1.3
+      , unordered-containers >=0.2 && <0.3
+      , wreq >=0.5 && <0.6
