--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -39,7 +39,7 @@ library
       , bytestring >=0.10 && <0.11
       , http-types >=0.12 && <0.13
       , scotty >=0.11 && <0.12
-      , stripe-concepts
-      , stripe-signature
+      , stripe-concepts >=1.0 && <1.1
+      , stripe-signature >=1.0 && <1.1
       , text >=1.2 && <1.3
       , unordered-containers >=0.2 && <0.3
