--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -41,7 +41,7 @@ library
       , bytestring >=0.10 && <0.11
       , cryptonite >=0.25 && <0.27
       , memory >=0.14 && <0.16
-      , stripe-concepts
+      , stripe-concepts >=1.0 && <1.1
       , text >=1.2 && <1.3
 
 test-suite test
