--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -42,7 +42,7 @@ library
       , base >=4.10 && <4.14
       , bytestring >=0.10 && <0.11
       , lens >=4.17 && <4.19
-      , stripe-concepts
+      , stripe-concepts >=1.0 && <1.1
       , text >=1.2 && <1.3
       , unordered-containers >=0.2 && <0.3
       , wreq >=0.5 && <0.6
