--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -1,5 +1,5 @@
 name: stripe-concepts
-version: 1.0.2.2
+version: 1.0.2.4
 
 synopsis: Types for the Stripe API
 category: Web
@@ -20,7 +20,7 @@ license-file: license.txt
 
 build-type: Simple
 cabal-version: >=1.10
-tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1
+tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
     changelog.md
@@ -33,6 +33,6 @@ library
         Stripe.Concepts
 
     build-depends:
-        base >=4.10 && <4.14
+        base >=4.10 && <4.15
       , bytestring >=0.10 && <0.11
       , text >=1.2 && <1.3
