--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -1,5 +1,5 @@
 name: stripe-scotty
-version: 1.0.0.2
+version: 1.0.0.4
 
 synopsis: Listen for Stripe webhook events with Scotty
 category: Web
@@ -21,7 +21,7 @@ license-file: license.txt
 
 build-type: Simple
 cabal-version: >=1.10
-tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1
+tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
     changelog.md
@@ -35,7 +35,7 @@ library
 
     build-depends:
         aeson >=1.4 && <1.5
-      , base >=4.10 && <4.14
+      , base >=4.10 && <4.15
       , bytestring >=0.10 && <0.11
       , http-types >=0.12 && <0.13
       , scotty >=0.11 && <0.12
