--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,5 +1,5 @@
 name: stripe-wreq
-version: 1.0.1.2
+version: 1.0.1.4
 
 synopsis: Use the Stripe API via Wreq
 category: Web
@@ -25,7 +25,7 @@ license-file: license.txt
 
 build-type: Simple
 cabal-version: >=1.10
-tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1
+tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
     changelog.md
@@ -39,9 +39,9 @@ library
 
     build-depends:
         aeson >=1.4 && <1.5
-      , base >=4.10 && <4.14
+      , base >=4.10 && <4.15
       , bytestring >=0.10 && <0.11
-      , lens >=4.17 && <4.19
+      , lens >=4.17 && <4.20
       , stripe-concepts >=1.0 && <1.1
       , text >=1.2 && <1.3
       , unordered-containers >=0.2 && <0.3
