--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -1,3 +1,5 @@
+cabal-version: 2.0
+
 name: stripe-concepts
 version: 1.0.2.4
 
@@ -19,7 +21,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-cabal-version: >=1.10
 tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
@@ -33,6 +34,6 @@ library
         Stripe.Concepts
 
     build-depends:
-        base >=4.10 && <4.15
-      , bytestring >=0.10 && <0.11
-      , text >=1.2 && <1.3
+        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
+      , bytestring ^>= 0.10
+      , text ^>= 1.2
