--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -1,3 +1,5 @@
+cabal-version: 2.0
+
 name: stripe-scotty
 version: 1.0.0.6
 
@@ -20,7 +22,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-cabal-version: >=1.10
 tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
@@ -34,12 +35,12 @@ library
         Stripe.Scotty
 
     build-depends:
-        aeson >=1.4 && <1.6
-      , base >=4.10 && <4.15
-      , bytestring >=0.10 && <0.11
-      , http-types >=0.12 && <0.13
-      , scotty >=0.11 && <0.13
-      , stripe-concepts >=1.0 && <1.1
-      , stripe-signature >=1.0 && <1.1
-      , text >=1.2 && <1.3
-      , unordered-containers >=0.2 && <0.3
+        aeson ^>= 1.4 || ^>= 1.5
+      , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
+      , bytestring ^>= 0.10
+      , http-types ^>= 0.12
+      , scotty ^>= 0.11 || ^>= 0.12
+      , stripe-concepts ^>= 1.0
+      , stripe-signature ^>= 1.0
+      , text ^>= 1.2
+      , unordered-containers ^>= 0.2
