--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -1,3 +1,5 @@
+cabal-version: 2.0
+
 name: stripe-signature
 version: 1.0.0.6
 
@@ -22,7 +24,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-cabal-version: >=1.10
 tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
@@ -36,13 +37,13 @@ library
         Stripe.Signature
 
     build-depends:
-        base >=4.10 && <4.15
-      , base16-bytestring >= 0.1 && <0.2
-      , bytestring >=0.10 && <0.11
-      , cryptonite >=0.25 && <0.29
-      , memory >=0.14 && <0.16
-      , stripe-concepts >=1.0 && <1.1
-      , text >=1.2 && <1.3
+        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
+      , base16-bytestring ^>= 0.1
+      , bytestring ^>= 0.10
+      , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28
+      , memory ^>= 0.14 || ^>= 0.15
+      , stripe-concepts ^>= 1.0
+      , text ^>= 1.2
 
 test-suite test
     default-language: Haskell2010
@@ -52,7 +53,7 @@ test-suite test
     ghc-options: -threaded
 
     build-depends:
-        base >=4.10 && <4.15
-      , bytestring >=0.10 && <0.11
+        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
+      , bytestring ^>= 0.10
       , stripe-signature
-      , text >=1.2 && <1.3
+      , text ^>= 1.2
