--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,3 +1,5 @@
+cabal-version: 2.0
+
 name: stripe-wreq
 version: 1.0.1.6
 
@@ -24,7 +26,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-cabal-version: >=1.10
 tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
 
 extra-source-files:
@@ -38,11 +39,11 @@ library
         Stripe.Wreq
 
     build-depends:
-        aeson >=1.4 && <1.6
-      , base >=4.10 && <4.15
-      , bytestring >=0.10 && <0.11
-      , lens >=4.17 && <4.20
-      , stripe-concepts >=1.0 && <1.1
-      , text >=1.2 && <1.3
-      , unordered-containers >=0.2 && <0.3
-      , wreq >=0.5 && <0.6
+        aeson ^>= 1.4 || ^>= 1.5
+      , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
+      , bytestring ^>= 0.10
+      , lens >= 4.17 && < 5.1
+      , stripe-concepts ^>= 1.0
+      , text ^>= 1.2
+      , unordered-containers ^>= 0.2
+      , wreq ^>= 0.5
