--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -26,7 +26,8 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1
+tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1,
+             GHC==9.0.1
 
 extra-source-files:
     changelog.md
@@ -41,7 +42,8 @@ library
     build-depends:
         aeson ^>= 1.4 || ^>= 1.5
       , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
-      , bytestring ^>= 0.10
+          || ^>= 4.15
+      , bytestring ^>= 0.10 || ^>= 0.11
       , lens >= 4.17 && < 5.1
       , stripe-concepts ^>= 1.0
       , text ^>= 1.2
