--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,7 +1,7 @@
 cabal-version: 2.0
 
 name: stripe-wreq
-version: 1.0.1.10
+version: 1.0.1.12
 
 synopsis: Use the Stripe API via Wreq
 category: Web
@@ -26,8 +26,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1, GHC==8.10.1,
-             GHC==9.0.1
 
 extra-source-files:
     changelog.md
@@ -40,12 +38,11 @@ library
         Stripe.Wreq
 
     build-depends:
-        aeson ^>= 1.4 || ^>= 1.5
+        aeson ^>= 2.0
       , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
           || ^>= 4.15
       , bytestring ^>= 0.10 || ^>= 0.11
-      , lens >= 4.17 && < 5.1
+      , lens >= 4.17 && < 5.2
       , stripe-concepts ^>= 1.0
       , text ^>= 1.2
-      , unordered-containers ^>= 0.2
       , wreq ^>= 0.5
