--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -31,6 +31,7 @@ extra-source-files:
 library
     hs-source-dirs: library
     default-language: Haskell2010
+    ghc-options: -Wall
 
     exposed-modules:
         Stripe.Signature
@@ -51,11 +52,13 @@ test-suite test
     hs-source-dirs: test
     type: exitcode-stdio-1.0
     main-is: test.hs
-    ghc-options: -threaded
+    ghc-options: -Wall
 
     build-depends:
         base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
           || ^>= 4.15
+      , base16-bytestring ^>= 1.0
       , bytestring ^>= 0.10 || ^>= 0.11
+      , stripe-concepts ^>= 1.0
       , stripe-signature
       , text ^>= 1.2
