--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -41,9 +41,7 @@ library
           || ^>= 4.15
       , base16-bytestring ^>= 1.0
       , bytestring ^>= 0.10 || ^>= 0.11
-      , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28
-                || ^>= 0.29
-      , memory ^>= 0.14 || ^>= 0.15 || ^>= 0.16
+      , cryptohash-sha256 ^>= 0.11.101
       , stripe-concepts ^>= 1.0
       , text ^>= 1.2
 
