simplify cabal.project

--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,1 @@
-packages:
-    stripe-concepts/stripe-concepts.cabal
-  , stripe-scotty/stripe-scotty.cabal
-  , stripe-signature/stripe-signature.cabal
-  , stripe-wreq/stripe-wreq.cabal
-
+packages: stripe-concepts, stripe-scotty, stripe-signature, stripe-wreq
