--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -45,7 +45,7 @@ library
       , stripe-concepts ^>= 1.0
       , text ^>= 1.2
 
-test-suite test
+test-suite test-stripe-signature
     default-language: Haskell2010
     hs-source-dirs: test
     type: exitcode-stdio-1.0
