--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -33,7 +33,6 @@ library
         Stripe.Concepts
 
     build-depends:
-        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
-          || ^>= 4.15 || ^>= 4.16
+        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
       , bytestring ^>= 0.10 || ^>= 0.11
       , text ^>= 1.2
