--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -35,8 +35,7 @@ library
 
     build-depends:
         aeson ^>= 2.0
-      , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
-          || ^>= 4.15
+      , base ^>= 4.14 || ^>= 4.15
       , bytestring ^>= 0.10 || ^>= 0.11
       , http-types ^>= 0.12
       , scotty ^>= 0.12
