--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -39,10 +39,9 @@ library
 
     build-depends:
         aeson ^>= 2.0
-      , base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
-          || ^>= 4.15
+      , base ^>= 4.14 || ^>= 4.15
       , bytestring ^>= 0.10 || ^>= 0.11
-      , lens >= 4.17 && < 5.2
+      , lens ^>= 5.0 || ^>= 5.1
       , stripe-concepts ^>= 1.0
       , text ^>= 1.2
       , wreq ^>= 0.5
