--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
-on: [push, pull_request]
+on: [push]
 
-name: CI for Stripe libraries
+name: Test
 
 jobs:
   build:
@@ -9,13 +9,8 @@ jobs:
 
     strategy:
       matrix:
-        ghc:
-          - '8.10'
-          - '9.0'
-          - '9.2'
-        os:
-          - ubuntu-latest
-          - macos-latest
+        ghc: ['8.10', '9.0', '9.2']
+        os: ['ubuntu-latest', 'macos-latest']
 
     steps:
       - uses: actions/checkout@v2
@@ -26,13 +21,17 @@ jobs:
           path: |
             ~/.cabal/packages
             ~/.cabal/store
-          key: ${{ runner.os }}-${{ matrix.ghc }}
+          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', 'configurations/ghc-${{ matrix.ghc }}.project') }}
+          restore-keys: |
+              ${{ runner.os }}-${{ matrix.ghc }}-
+              ${{ runner.os }}-
 
       - uses: haskell/actions/setup@v1
         with:
           ghc-version: ${{ matrix.ghc }}
 
+      - name: Build
+        run: cabal build all --project-file ./configurations/ghc-${{ matrix.ghc }}.project
+
       - name: Test
-        run: runhaskell --ghc-arg='-package process' ./.github/workflows/test.hs
-        env:
-          ghc: ${{ matrix.ghc }}
+        run: cabal test all --enable-tests --project-file ./configurations/ghc-${{ matrix.ghc }}.project
