Support base 4.16 (ghc 9.2) for all packages

--- a/configurations/ghc-9.2.project
+++ b/configurations/ghc-9.2.project
@@ -1,4 +1,4 @@
-packages: stripe-concepts, stripe-signature
+packages: stripe-concepts, stripe-scotty, stripe-signature, stripe-wreq
 
 constraints:
     base == 4.16.*
