--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -35,7 +35,7 @@ library
 
     build-depends:
         aeson ^>= 2.0
-      , base ^>= 4.14 || ^>= 4.15
+      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
       , bytestring ^>= 0.10 || ^>= 0.11
       , http-types ^>= 0.12
       , scotty ^>= 0.12
