--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -39,7 +39,7 @@ library
 
     build-depends:
         aeson ^>= 2.0
-      , base ^>= 4.14 || ^>= 4.15
+      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
       , bytestring ^>= 0.10 || ^>= 0.11
       , lens ^>= 5.0 || ^>= 5.1
       , stripe-concepts ^>= 1.0
