--- a/configurations/ghc-9.2.project
+++ b/configurations/ghc-9.2.project
@@ -1,4 +1,5 @@
 packages: stripe-concepts, stripe-scotty, stripe-signature, stripe-wreq
 
 constraints:
-    base == 4.16.*
+    aeson == 2.1.*
+  , base == 4.16.*
