--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -34,7 +34,7 @@ library
         Stripe.Scotty
 
     build-depends:
-        aeson ^>= 2.0
+        aeson ^>= 2.0 || ^>= 2.1
       , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
       , bytestring ^>= 0.10 || ^>= 0.11
       , http-types ^>= 0.12
