--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -38,7 +38,7 @@ library
         Stripe.Wreq
 
     build-depends:
-        aeson ^>= 2.0
+        aeson ^>= 2.0 || ^>= 2.1
       , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
       , bytestring ^>= 0.10 || ^>= 0.11
       , lens ^>= 5.0 || ^>= 5.1
