--- a/configurations/ghc-9.2.project
+++ b/configurations/ghc-9.2.project
@@ -3,3 +3,4 @@ packages: stripe-concepts, stripe-scotty, stripe-signature, stripe-wreq
 constraints:
     aeson == 2.1.*
   , base == 4.16.*
+  , lens == 5.2.*
