--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -33,6 +33,6 @@ library
         Stripe.Concepts
 
     build-depends:
-        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
+        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
       , bytestring ^>= 0.10 || ^>= 0.11
-      , text ^>= 1.2
+      , text ^>= 1.2 || ^>= 2.0
