--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -40,9 +40,9 @@ library
 
     build-depends:
         aeson ^>= 2.0 || ^>= 2.1
-      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
+      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
       , bytestring ^>= 0.10 || ^>= 0.11
       , lens ^>= 5.0 || ^>= 5.1 || ^>= 5.2
       , stripe-concepts ^>= 1.0
-      , text ^>= 1.2
+      , text ^>= 1.2 || ^>= 2.0
       , wreq ^>= 0.5
