--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -1,8 +1,7 @@
-cabal-version: 2.0
+cabal-version: 3.0
 
 name: stripe-concepts
 version: 1.0.3.2
-
 synopsis: Types for the Stripe API
 category: Web
 
@@ -20,10 +19,7 @@ copyright: 2019-2021 Mission Valley Software LLC
 license: MIT
 license-file: license.txt
 
-build-type: Simple
-
-extra-source-files:
-    changelog.md
+extra-source-files: *.md
 
 library
     hs-source-dirs: library
@@ -33,6 +29,6 @@ library
         Stripe.Concepts
 
     build-depends:
-        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
+      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
       , bytestring ^>= 0.10 || ^>= 0.11
       , text ^>= 1.2 || ^>= 2.0
