--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -1,8 +1,7 @@
-cabal-version: 2.0
+cabal-version: 3.0
 
 name: stripe-scotty
 version: 1.1.0.3
-
 synopsis: Listen for Stripe webhook events with Scotty
 category: Web
 
@@ -21,10 +20,7 @@ copyright: 2019-2021 Mission Valley Software LLC
 license: MIT
 license-file: license.txt
 
-build-type: Simple
-
-extra-source-files:
-    changelog.md
+extra-source-files: *.md
 
 library
     hs-source-dirs: library
@@ -34,7 +30,7 @@ library
         Stripe.Scotty
 
     build-depends:
-        aeson ^>= 2.0 || ^>= 2.1
+      , aeson ^>= 2.0 || ^>= 2.1
       , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
       , bytestring ^>= 0.10 || ^>= 0.11
       , http-types ^>= 0.12
