--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,8 +1,7 @@
-cabal-version: 2.0
+cabal-version: 3.0
 
 name: stripe-wreq
 version: 1.0.1.15
-
 synopsis: Use the Stripe API via Wreq
 category: Web
 
@@ -25,10 +24,7 @@ copyright: 2019-2021 Mission Valley Software LLC
 license: MIT
 license-file: license.txt
 
-build-type: Simple
-
-extra-source-files:
-    changelog.md
+extra-source-files: *.md
 
 library
     hs-source-dirs: library
@@ -38,7 +34,7 @@ library
         Stripe.Wreq
 
     build-depends:
-        aeson ^>= 2.0 || ^>= 2.1
+      , aeson ^>= 2.0 || ^>= 2.1
       , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
       , bytestring ^>= 0.10 || ^>= 0.11
       , lens ^>= 5.0 || ^>= 5.1 || ^>= 5.2
