add readme files

--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -5,10 +5,9 @@ version: 1.0.0.15
 synopsis: Verification of Stripe webhook signatures
 category: Web
 
-description:
-    When <https://stripe.com/ Stripe> sends an event to your webhook, it
-    includes an HTTP header named @Stripe-Signature@. You should use this
-    to verify the authenticity of the request to ensure that you are not
+description: When Stripe sends an event to your webhook, it includes
+    an HTTP header named “Stripe-Signature”. You should use this to
+    verify the authenticity of the request to ensure that you are not
     acting upon forged events originating from some source other than
     Stripe.
 
