--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -5,9 +5,8 @@ version: 1.0.3.2
 synopsis: Types for the Stripe API
 category: Web
 
-description:
-    This is a minimal package that just defines a common set of types
-    for working with the <https://stripe.com/ Stripe> API.
+description: This is a minimal package that just defines
+    a common set of types for working with the Stripe API.
 
 homepage:    https://github.com/typeclasses/stripe
 bug-reports: https://github.com/typeclasses/stripe/issues
