--- a/stripe-scotty/stripe-scotty.cabal
+++ b/stripe-scotty/stripe-scotty.cabal
@@ -5,10 +5,8 @@ version: 1.1.0.3
 synopsis: Listen for Stripe webhook events with Scotty
 category: Web
 
-description:
-    This package provides support for writing a
-    <https://stripe.com/ Stripe> webhook server using
-    <https://hackage.haskell.org/package/scotty Scotty>.
+description: This package provides support for writing
+    a Stripe webhook server using Scotty.
 
 homepage:    https://github.com/typeclasses/stripe
 bug-reports: https://github.com/typeclasses/stripe/issues
