--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-concepts
-version: 1.0.3.2
+version: 1.0.3.3
 synopsis: Types for the Stripe API
 category: Web
 
@@ -22,12 +22,14 @@ extra-source-files: *.md
 
 library
     hs-source-dirs: library
-    default-language: Haskell2010
+    default-language: GHC2021
+    ghc-options: -Wall
+    default-extensions: DerivingStrategies
 
     exposed-modules:
         Stripe.Concepts
 
     build-depends:
-      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
-      , bytestring ^>= 0.10.12 || ^>= 0.11
-      , text ^>= 1.2.4 || ^>= 2.0
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
+      , bytestring ^>= 0.11
+      , text ^>= 1.2.5 || ^>= 2.0
