--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-signature
-version: 1.0.0.15
+version: 1.0.0.16
 synopsis: Verification of Stripe webhook signatures
 category: Web
 
@@ -24,15 +24,15 @@ license-file: license.txt
 extra-source-files: *.md
 
 common base
-    default-language: Haskell2010
+    default-language: GHC2021
     ghc-options: -Wall
     build-depends:
-      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
       , base16-bytestring ^>= 1.0.2
-      , bytestring ^>= 0.10.12 || ^>= 0.11
+      , bytestring ^>= 0.11
       , cryptohash-sha256 ^>= 0.11.102
       , stripe-concepts ^>= 1.0.3
-      , text ^>= 1.2.4 || ^>= 2.0
+      , text ^>= 1.2.5 || ^>= 2.0
 
 library
     import: base
