--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-wreq
-version: 1.0.1.15
+version: 1.0.1.16
 synopsis: Use the Stripe API via Wreq
 category: Web
 
@@ -25,16 +25,17 @@ extra-source-files: *.md
 
 library
     hs-source-dirs: library
-    default-language: Haskell2010
+    default-language: GHC2021
+    ghc-options: -Wall -fno-warn-missing-signatures
 
     exposed-modules:
         Stripe.Wreq
 
     build-depends:
       , aeson ^>= 2.0.3 || ^>= 2.1
-      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
-      , bytestring ^>= 0.10.12 || ^>= 0.11
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
+      , bytestring ^>= 0.11
       , lens ^>= 5.0.1 || ^>= 5.1 || ^>= 5.2
       , stripe-concepts ^>= 1.0.3
-      , text ^>= 1.2.4 || ^>= 2.0
+      , text ^>= 1.2.5 || ^>= 2.0
       , wreq ^>= 0.5.3
