--- a/stripe-concepts/stripe-concepts.cabal
+++ b/stripe-concepts/stripe-concepts.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-concepts
-version: 1.0.3.3
+version: 1.0.3.4
 synopsis: Types for the Stripe API
 category: Web
 
@@ -30,6 +30,6 @@ library
         Stripe.Concepts
 
     build-depends:
-      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
-      , bytestring ^>= 0.11
-      , text ^>= 1.2.5 || ^>= 2.0
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19
+      , bytestring ^>= 0.11 || ^>= 0.12
+      , text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1
