--- a/stripe-signature/stripe-signature.cabal
+++ b/stripe-signature/stripe-signature.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-signature
-version: 1.0.0.16
+version: 1.0.0.17
 synopsis: Verification of Stripe webhook signatures
 category: Web
 
@@ -27,12 +27,12 @@ common base
     default-language: GHC2021
     ghc-options: -Wall
     build-depends:
-      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19
       , base16-bytestring ^>= 1.0.2
-      , bytestring ^>= 0.11
+      , bytestring ^>= 0.11 || ^>= 0.12
       , cryptohash-sha256 ^>= 0.11.102
       , stripe-concepts ^>= 1.0.3
-      , text ^>= 1.2.5 || ^>= 2.0
+      , text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1
 
 library
     import: base
