--- a/stripe-wreq/stripe-wreq.cabal
+++ b/stripe-wreq/stripe-wreq.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name: stripe-wreq
-version: 1.0.1.16
+version: 1.0.1.17
 synopsis: Use the Stripe API via Wreq
 category: Web
 
@@ -32,10 +32,10 @@ library
         Stripe.Wreq
 
     build-depends:
-      , aeson ^>= 2.0.3 || ^>= 2.1
-      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
-      , bytestring ^>= 0.11
+      , aeson ^>= 2.0.3 || ^>= 2.1 || ^>= 2.2
+      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19
+      , bytestring ^>= 0.11 || ^>= 0.12
       , lens ^>= 5.0.1 || ^>= 5.1 || ^>= 5.2
       , stripe-concepts ^>= 1.0.3
-      , text ^>= 1.2.5 || ^>= 2.0
+      , text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1
       , wreq ^>= 0.5.3
